ajout poll command test trade